[package]
name = "lpr-rust"
version = "0.1.0"
authors = ["kingrong"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gtk-display = ["gtk", "gio", "gdk-pixbuf"]

[dependencies]
tensorflow = { git = "https://github.com/kingrongH/tensorflow-rust", branch = "v1.14.0", features = ["experimental_training"] }
image = "0.23.0"
imageproc = { git = "https://github.com/image-rs/imageproc", features = ["display-window"] }
gtk = { version = "0.8.1", optional = true }
gio = { version = "", optional = true }
gdk-pixbuf = { version = "0.8.0", optional = true }
rusttype = "0.8.2"
clap = "2.33"

